Add documentation to get users route
